# nsopt

./: .gitignore  .gitmodules  README.md  pyproject.toml
doc/: README.md  conf.py  nsopt.rst  requirements.txt
doc/_build/doctrees/: environment.pickle  index.doctree  nsopt.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  nsopt.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/_build/html/_sources/: index.rst.txt
example/: example.ipynb
src/nsopt/: __init__.py
src/nsopt/problem/: LASSO.py  base.py  logistic.py  matComp.py  regularizer.py  rosenbrock.py  students.py
src/nsopt/regularizer/: base.py  elasticNet.py  l1.py  l2.py  nuclear.py  zero.py
src/nsopt/solver/: base.py  lbfgs.py
submodules/: README.md
