[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nsopt"
version = "0.0.1"
authors = [
  { name="hiroki hamaguchi", email="hiroki4096@gmail.com" },
]
description = "Non-Smooth Optimization package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/HirokiHamaguchi/nsopt"
Issues = "https://github.com/HirokiHamaguchi/nsopt/issues"
